@@ -54,6 +54,7 @@ define('MAG_CURRENTDOW',		39);
 define('MAG_REVISIONID',		40);
 define('MAG_SCRIPTPATH',		41);
 define('MAG_SERVERNAME',		42);
+define('MAG_NUMBEROFFILES',		43);
 
 $wgVariableIDs = array(
 	MAG_CURRENTMONTH,
@@ -65,6 +66,7 @@ $wgVariableIDs = array(
 	MAG_CURRENTYEAR,
 	MAG_CURRENTTIME,
 	MAG_NUMBEROFARTICLES,
+	MAG_NUMBEROFFILES,
 	MAG_SITENAME,
 	MAG_SERVER,
 	MAG_SERVERNAME,
