@@ -208,6 +208,7 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_CURRENTYEAR          => array( 1,    'CURRENTYEAR'            ),
 	MAG_CURRENTTIME          => array( 1,    'CURRENTTIME'            ),
 	MAG_NUMBEROFARTICLES     => array( 1,    'NUMBEROFARTICLES'       ),
+	MAG_NUMBEROFFILES        => array( 1,    'NUMBEROFFILES'          ),
 	MAG_PAGENAME             => array( 1,    'PAGENAME'               ),
 	MAG_PAGENAMEE            => array( 1,    'PAGENAMEE'              ),
 	MAG_NAMESPACE            => array( 1,    'NAMESPACE'              ),
